@@ -18,7 +18,11 @@ import step.core.execution.model.AutomationPackageExecutionParameters;
 import step.core.execution.model.Execution;
 import step.core.execution.model.ExecutionMode;
 import step.core.execution.model.ExecutionStatus;
+import step.core.plans.PlanFilter;
+import step.core.plans.filters.PlanByExcludedCategoriesFilter;
+import step.core.plans.filters.PlanByIncludedCategoriesFilter;
 import step.core.plans.filters.PlanByIncludedNamesFilter;
+import step.core.plans.filters.PlanMultiFilter;
 import step.core.repositories.ImportResult;
 
 import java.io.File;
@@ -32,6 +36,8 @@ public class AbstractExecuteAutomationPackageToolTest {
     protected static final Tenant TENANT_1 = createTenant1();
 
     public static final String TEST_INCLUDE_PLANS = "plan1,plan2";
+    public static final String TEST_INCLUDE_CATEGORIES = "PerformanceTest,JMterTest";
+    public static final String TEST_EXCLUDE_CATEGORIES = "CypressTest,OidcTest";
 
     @Test
     public void testExecuteOk() throws Exception {
@@ -116,8 +122,11 @@ public class AbstractExecuteAutomationPackageToolTest {
         AutomationPackageExecutionParameters captured = executionParamsCaptor.getValue();
         Assert.assertEquals("testUser", captured.getUserID());
         Assert.assertEquals(ExecutionMode.RUN, captured.getMode());
-        Assert.assertEquals(List.of("plan1", "plan2"), ((PlanByIncludedNamesFilter) captured.getPlanFilter()).getIncludedNames());
-
+        PlanMultiFilter planFilter = (PlanMultiFilter) captured.getPlanFilter();
+        PlanMultiFilter expectedFilter = new PlanMultiFilter(List.of(new PlanByIncludedNamesFilter(Arrays.asList(TEST_INCLUDE_PLANS.split(","))),
+                new PlanByIncludedCategoriesFilter(Arrays.asList(TEST_INCLUDE_CATEGORIES.split(","))),
+                new PlanByExcludedCategoriesFilter(Arrays.asList(TEST_EXCLUDE_CATEGORIES.split(",")))));
+        Assert.assertEquals(expectedFilter, planFilter);
         Assert.assertEquals(createTestCustomParams(), captured.getCustomParameters());
     }
 
@@ -159,7 +168,9 @@ public class AbstractExecuteAutomationPackageToolTest {
                                                             RemoteAutomationPackageClientImpl remoteAutomationPackageClientMock) throws URISyntaxException {
         return new ExecuteAutomationPackageToolTestable(
                 "http://localhost:8080", TENANT_1.getName(), "testUser", "abc", createTestCustomParams(),
-                3, true, ensureExecutionSuccess, true, TEST_INCLUDE_PLANS, null, executionManagerMock, remoteAutomationPackageClientMock
+                3, true, ensureExecutionSuccess, true, TEST_INCLUDE_PLANS, null,
+                TEST_INCLUDE_CATEGORIES, TEST_EXCLUDE_CATEGORIES, false, 0, executionManagerMock, remoteAutomationPackageClientMock,
+                null
         );
     }
 
@@ -181,9 +192,13 @@ public class AbstractExecuteAutomationPackageToolTest {
                                                     Integer executionResultTimeoutS, Boolean waitForExecution,
                                                     Boolean ensureExecutionSuccess, Boolean printAggregatedReport,
                                                     String includePlans, String excludePlans,
+                                                    String includeCategories, String excludeCategories,
+                                                    Boolean wrapIntoTestSet, Integer numberOfThreads,
                                                     RemoteExecutionManager remoteExecutionManagerMock,
-                                                    RemoteAutomationPackageClientImpl remoteAutomationPackageClientMock) {
-            super(url, stepProjectName, userId, authToken, executionParameters, executionResultTimeoutS, waitForExecution, ensureExecutionSuccess, printAggregatedReport, includePlans, excludePlans);
+                                                    RemoteAutomationPackageClientImpl remoteAutomationPackageClientMock,
+                                                    MavenArtifactIdentifier mavenArtifactIdentifier) {
+            super(url, stepProjectName, userId, authToken, executionParameters, executionResultTimeoutS, waitForExecution,
+                    ensureExecutionSuccess, printAggregatedReport, includePlans, excludePlans, includeCategories, excludeCategories, wrapIntoTestSet, numberOfThreads, mavenArtifactIdentifier);
             this.remoteExecutionManagerMock = remoteExecutionManagerMock;
             this.remoteAutomationPackageClientMock = remoteAutomationPackageClientMock;
         }
